--- a/example/pano/index.html
+++ b/example/pano/index.html
@@ -21,6 +21,7 @@
     <div id="container"></div>
    
     <script src="../../src/WebGLRender/Four.js"></script>
+    <!--<script src="../../dist/Four.js"></script>-->
     <script src="panorama.js"></script>
     <script src="main.js"></script>
 </body>
